--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -13,10 +13,11 @@
 /*
  * Global layout stuff
  */
+
 body {
   /* color: #545149; */
   background-color: antiquewhite;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   font-size: 24px;
 }
 
@@ -31,7 +32,7 @@ main {
   align-items: stretch;
   align-content: stretch;
   background-color: antiquewhite;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   /* background-image: url("../images/binding-dark.png"); */
 }
 
@@ -40,10 +41,15 @@ main {
     flex-direction: row;
     align-items: flex-start;
   }
+
   main {
     height: 200%;
   }
+
   .container {
     width: 75%;
   }
+  
+ 
 }
+
