--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -9,7 +9,6 @@ Full width of the viewport
 html {
   box-sizing: border-box;
 }
-
 nav {
   display: flex;
   justify-content: space-between;
@@ -22,21 +21,20 @@ nav {
   /* background-color: #4056A1; */
   background-color: #d89820;
   background-image: url("../images/binding-dark.png");
-}
 
+}
 #tweeter {
-  font-family: "Bungee", cursive;
+  font-family: 'Bungee', cursive;
 }
-
 .angel {
   color: #ff0505;
+  
 }
-
 .navRight {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 @media only screen and (min-width: 1024px) {
