--- a/sass/new-tweet.scss
+++ b/sass/new-tweet.scss
@@ -6,26 +6,25 @@
   justify-content: center;
   margin-top: 1rem;
 }
-
 .new-tweet h2 {
   color: rgb(7, 251, 251);
 }
-
 .new-tweet textarea {
   width: 100%;
   height: 10rem;
   padding: 1rem;
   font-size: 1.5rem;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
-.new-tweet button {
+.new-tweet button {  
   border-radius: 5px;
   border: 1px solid #4056A1;
   background-color: #4056A1;
   color: #FFFFFF;
   font-size: 1.5rem;
-  font-family: "Bungee", cursive;
+  font-family: 'Bungee', cursive;
+  
 }
 
 .new-tweet button:hover {
@@ -36,7 +35,7 @@
   margin-bottom: 20px;
   font-size: 1.5rem;
   font-weight: bolder;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 .new-tweet form {
@@ -50,9 +49,9 @@
   flex-direction: row;
   justify-content: space-between;
   border-width: 5px;
-  padding-top: 10px;
+  padding-top: 10px; 
   margin-bottom: 10px;
-  font-family: "Bungee", cursive;
+  font-family: 'Bungee', cursive;
   font-size: 24px;
   border-top-style: solid;
 }
@@ -60,10 +59,11 @@
 .errorMsg {
   color: red;
   font-size: 1.5rem;
-  font-family: "Bungee", cursive;
+  font-family: 'Bungee', cursive;
 }
 
 /*Tweet comments*/
+
 #tweets-container {
   margin-left: 5%;
   padding-bottom: 20px;
@@ -83,7 +83,6 @@
   background-color: antiquewhite;
   border: 5px solid black;
 }
-
 .tweet-header {
   display: flex;
   justify-content: space-between;
@@ -141,7 +140,6 @@
   padding: 5px;
   color: #4056A1;
 }
-
 .tweet-logos i:hover {
   color: rgb(243, 228, 27);
 }
@@ -156,15 +154,16 @@
 @media only screen and (min-width: 1024px) {
   .new-tweet {
     display: flex;
-    width: 60%;
-    margin-left: 70%;
+    width: 50%;
+    margin-left: 75%;
     margin-right: 5%;
-    margin-top: 20%;
+    margin-top: 10%;
   }
+  
   #tweets-container {
     display: flex;
-    width: 54%;
-    margin-left: 73%;
+    width: 45%;
+    margin-left: 77.5%;
     margin-right: 5%;
   }
 }
